# chat-ai

./: .env.example  .gitignore  .pre-commit-config.yml  ASYNC_POSTGRES_UPGRADE.md  CELERY_SETUP.md  CHECKPOINTER_MESSAGE_MANAGEMENT.md  Dockerfile  FIXES_SUMMARY.md  IMPLEMENTATION_GUIDE.md  LANGGRAPH_OPTIMIZATION.md  LANGGRAPH_REFACTOR.md  README.md  alembic.ini  cursorrules.yml  demo_langgraph.py  dev.env  docker-compose.enhanced.yml  docker-compose.yml  fix_postgres_deps.py  optimization_proposal.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  requirements_langgraph.txt  run_celery_worker.py  run_local_api.bat  run_local_api.py  start_celery.bat  start_services.bat  start_services.sh  test_config.py  test_graph_compilation.py
app/: __init__.py  main.py
app/api/: api.py  dependencies.py  deps.py  exceptions.py  middlewares.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  conversations.py  files.py  health.py  messages.py  models.py  tasks.py  users.py
app/config/: llm.py
app/core/: config.py  events.py  exceptions.py  logging.py  security.py
app/db/: session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 19d70f4103d1_add_search_mode_to_conversation.py  565ce19416ff_add_google_to_model_provider_enum.py  7bd61077962b_add_full_name_to_user_model.py  a59f34d587b8_initial_migration.py
app/db/models/: __init__.py  base.py  conversation.py  message.py  model_config.py  user.py  user_file.py
app/db/repositories/: base_repository.py  conversation_repository.py  message_repository.py  model_config_repository.py  user_file_repository.py  user_repository.py
app/llm/: __init__.py  manage.py
app/llm/agent/: service.py
app/llm/agents/: base.py
app/llm/chat/: service.py
app/llm/core/: anthropic_llm.py  base.py  checkpointer.py  config.py  factory.py  langchain_llm.py  manage.py  models.py  openai_llm.py
app/llm/core/prompts/: __init__.py  agent.md  chat.md  deepresearch.md  question_analysis.md  rag.md  search.md  system.md
app/llm/enhance/: hybrid_retriever.py  intent_tracker.py  quality_evaluator.py
app/llm/graph/chatbot/: builder.py  state.py
app/llm/graph/chatbot/nodes/: chat.py
app/llm/graph/react/: workflow.py
app/llm/graph/react/nodes/: action.py  agent.py
app/llm/graph/retriever/: builder.py  state.py
app/llm/graph/retriever/nodes/: call_model.py  invoke_retrieval.py  retrieve.py
app/llm/rag/: __init__.py  file_processor.py  retrieval_service.py  service.py
app/llm/tools/: base.py
app/monitoring/: health.py  metrics.py
app/plugins/cache/: base.py  manager.py
app/plugins/cache/providers/: redis.py
app/schemas/: base.py  conversation.py  file.py  message.py  model.py  token.py  user.py
app/services/: __init__.py  auth_service.py  conversation_service.py  file_management_service.py  file_service.py  message_orchestrator.py  message_service.py  model_service.py  retrieval_service.py  task_monitor_service.py  user_service.py
app/tasks/: base.py  celery.py  scheduler.py
app/tasks/jobs/: __init__.py  api.py  credits.py  email.py  file.py  inventory.py  scripts.py  stats.py
app/utils/: datetime.py  string.py  validation.py
chroma_db/: chroma.sqlite3
docs/: celery_tasks.md  embedding_configuration.md  file_upload_optimization_fix.md  prd.md  why_use_langchain_official.md
examples/: embedding_usage_example.py
frontend/: README.md  demo-chatgpt.html  demo.html  index.html  script.js  styles.css
scripts/: init_db.sh  run_dev.sh  run_tests.sh  start_celery_beat.sh  start_celery_worker.sh
tests/: conftest.py  test_embedding_providers.py
tests/api/v1/: test_users.py
tests/llm/chat/: test_chat_service.py
tests/llm/core/: test_anthropic_llm.py  test_langchain_llm.py  test_llm_factory.py  test_openai_llm.py
tests/llm/graph/: test_chatbot.py
tests/llm/rag/: test_file_processor.py  test_rag_service.py
tests/utils/: __init__.py  test_base.py
